# RaspberrPiPico_scratch

./: CMakeLists.txt  README.md  hello_world.c
